# multimodal-diffusion

./: .gitignore  README.md  check_data.ipynb  check_policy.ipynb  diffusion_client.py  diffusion_fake_client.py  diffusion_server.py  downsample_data.ipynb  eval_dbc_realworld_image.py  eval_server.py  fake_eval_client.py  pyproject.toml  realworld_dataset.py  requirements.txt  train_dbc.py  train_dbc_realworld_image.py  train_dp.py  utils.py  vision_backbones.txt
.claude/: settings.local.json
configs/dbc/: realworld_image.yaml  realworld_image_eef_pos.yaml  realworld_image_proprioception.yaml  realworld_image_tactile.yaml
configs/dbc/vision/: vision_pos.yaml  vision_pos_gripper.yaml  vision_pos_ori.yaml
configs/dbc/vision_tactile/: vision_tactile_pos.yaml  vision_tactile_pos_ori.yaml
configs/dp/: realworld_image.yaml  realworld_image_eef_pos.yaml  realworld_image_eef_pos_gripper.yaml  realworld_image_eef_pos_ori.yaml
configs/dp/vision/: vision_pos.yaml
configs/dp/vision_tactile/: vision_tactile_pos.yaml
scripts/: diffusion_client.py  diffusion_fake_client.py  diffusion_server.py  inspect_data.py  train_dbc.py  train_dp.py
source/: realworld_dataset.py  utils.py  vision_tactile_concat.py  vision_tactile_film.py
src/: realworld_dataset.py  sim_eval.py  utils.py  vision_tactile_concat.py  vision_tactile_film.py
